# bb-storage

./: BUILD.bazel  go.mod  go.sum  go_dependencies.bzl
pkg/blobstore/: BUILD.bazel  iscc_read_buffer_factory.go  reference_expanding_blob_access.go  reference_expanding_blob_access_test.go
pkg/blobstore/configuration/: BUILD.bazel  cas_blob_access_creator.go
pkg/blobstore/local/: BUILD.bazel  key.go
pkg/cloud/google/: BUILD 2.bazel  BUILD.bazel  config 2.go  config.go
pkg/digest/: BUILD.bazel  digest.go  instance_name.go
pkg/proto/configuration/blobstore/: BUILD.bazel  blobstore.pb.go  blobstore.proto
pkg/proto/configuration/cloud/google/: BUILD.bazel  google.pb 2.go  google.pb.go  google.proto
pkg/proto/icas/: icas.pb.go  icas.proto
tools/: container.bzl  workspace-status.sh
