load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "google",
    srcs = ["config.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/cloud/google",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/http",
        "//pkg/proto/configuration/cloud/google",
        "//pkg/util",
        "@org_golang_google_api//option",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
