load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "google_proto",
    srcs = ["google.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/http:http_proto"],
)

go_proto_library(
    name = "google_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/google",
    proto = ":google_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/http"],
)

go_library(
    name = "google",
    embed = [":google_go_proto"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/google",
    visibility = ["//visibility:public"],
)
